grammar/tabdown.py
from collections import defaultdict
import re


class TreeNode(object):
    def __init__(self, text, offset, elements=None):
        self.text = text
        self.offset = offset
        self.elements = elements or []

    def __iter__(self):
        for el in self.elements:
            yield el


class TreeNode1(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode1, self).__init__(text, offset, elements)
        self.tuning = elements[0]


class TreeNode2(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode2, self).__init__(text, offset, elements)
        self.tune_note = elements[1]


class TreeNode3(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode3, self).__init__(text, offset, elements)
        self.tune_note = elements[1]


class TreeNode4(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode4, self).__init__(text, offset, elements)
        self.measure = elements[1]


class TreeNode5(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode5, self).__init__(text, offset, elements)
        self.newline = elements[0]
        self.measure = elements[2]


class TreeNode6(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode6, self).__init__(text, offset, elements)
        self.notes = elements[4]


class TreeNode7(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode7, self).__init__(text, offset, elements)
        self.tempo = elements[0]


class TreeNode8(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode8, self).__init__(text, offset, elements)
        self.marker = elements[0]


class TreeNode9(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode9, self).__init__(text, offset, elements)
        self.triplet_feel = elements[0]


class TreeNode10(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode10, self).__init__(text, offset, elements)
        self.start_repeat = elements[0]


class TreeNode11(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode11, self).__init__(text, offset, elements)
        self.close_repeat = elements[1]


class TreeNode12(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode12, self).__init__(text, offset, elements)
        self.string_number = elements[0]
        self.fret_number = elements[6]
        self.note_duration_ext = elements[7]


class TreeNode13(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode13, self).__init__(text, offset, elements)
        self.string_number = elements[0]
        self.note_duration_ext = elements[2]


class TreeNode14(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode14, self).__init__(text, offset, elements)
        self.fret_number = elements[5]
        self.note_duration_ext = elements[6]


class TreeNode15(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode15, self).__init__(text, offset, elements)
        self.note_duration_ext = elements[1]


class TreeNode16(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode16, self).__init__(text, offset, elements)
        self.note_duration_ext = elements[1]


class TreeNode17(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode17, self).__init__(text, offset, elements)
        self.note_duration = elements[1]
        self.tempo_value = elements[4]


class TreeNode18(TreeNode):
    def __init__(self, text, offset, elements):
        super(TreeNode18, self).__init__(text, offset, elements)
        self.note_duration = elements[0]


class ParseError(SyntaxError):
    pass


FAILURE = object()


class Grammar(object):
    REGEX_1 = re.compile('^[A-G]')
    REGEX_2 = re.compile('^[1-8]')
    REGEX_3 = re.compile('^[1-9]')
    REGEX_4 = re.compile('^[0-9]')
    REGEX_5 = re.compile('^[1-9]')
    REGEX_6 = re.compile('^[0-9]')
    REGEX_7 = re.compile('^[1-9]')
    REGEX_8 = re.compile('^[\\\\/]')
    REGEX_9 = re.compile('^[0-9]')
    REGEX_10 = re.compile('^[0-9]')
    REGEX_11 = re.compile('^[^\\n^\\r^).]')
    REGEX_12 = re.compile('^[1-9]')
    REGEX_13 = re.compile('^[0-9]')
    REGEX_14 = re.compile('^[\\r]')
    REGEX_15 = re.compile('^[\\n]')
    REGEX_16 = re.compile('^[ \\t]')

    def _read_song(self):
        address0, index0 = FAILURE, self._offset
        cached = self._cache['song'].get(index0)
        if cached:
            self._offset = cached[1]
            return cached[0]
        index1, elements0 = self._offset, []
        address1 = FAILURE
        address1 = self._read_tuning()
        if address1 is not FAILURE:
            elements0.append(address1)
            address2 = FAILURE
            remaining0, index2, elements1, address3 = 1, self._offset, [], True
            while address3 is not FAILURE:
                address3 = self._read__()
                if address3 is not FAILURE:
                    elements1.append(address3)
                    remaining0 -= 1
            if remaining0 <= 0:
                address2 = TreeNode(self._input[index2:self._offset], index2, elements1)
                self._offset = self._offset
            else:
                address2 = FAILURE
            if address2 is not FAILURE:
                elements0.append(address2)
                address4 = FAILURE
                remaining1, index3, elements2, address5 = 0, self._offset, [], True
                while address5 is not FAILURE:
                    address5 = self._read_measures()
                    if address5 is not FAILURE:
                        elements2.append(address5)
                        remaining1 -= 1
                if remaining1 <= 0:
                    address4 = TreeNode(self._input[index3:self._offset], index3, elements2)
                    self._offset = self._offset
                else:
                    address4 = FAILURE
                if address4 is not FAILURE:
                    elements0.append(address4)
                    address6 = FAILURE
                    remaining2, index4, elements3, address7 = 0, self._offset, [], True
                    while address7 is not FAILURE:
                        address7 = self._read_newline()
                        if address7 is not FAILURE:
                            elements3.append(address7)
                            remaining2 -= 1
                    if remaining2 <= 0:
                        address6 = TreeNode(self._input[index4:self._offset], index4, elements3)
                        self._offset = self._offset
                    else:
                        address6 = FAILURE
                    if address6 is not FAILURE:
                        elements0.append(address6)
                    else:
                        elements0 = None
                        self._offset = index1
                else:
                    elements0 = None
                    self._offset = index1
            else:
                elements0 = None
                self._offset = index1
        else:
            elements0 = None
            self._offset = index1
        if elements0 is None:
            address0 = FAILURE
        else:
            address0 = self._actions.make_song(self._input, index1, self._offset, elements0)
            self._offset = self._offset
        self._cache['song'][index0] = (address0, self._offset)
        return address0

    def _read_tuning(self):
        address0, index0 = FAILURE, self._offset
        cached = self._cache['tuning'].get(index0)
        if cached:
            self._offset = cached[1]
            return cached[0]
        index1, elements0 = self._offset, []
        address1 = FAILURE
        chunk0 = None
        if self._offset < self._input_size:
            chunk0 = self._input[self._offset:self._offset + 7]
        if chunk0 == 'tuning(':
            address1 = TreeNode(self._input[self._offset:self._offset + 7], self._offset)
            self._offset = self._offset + 7
        else:
            address1 = FAILURE
            if self._offset > self._failure:
                self._failure = self._offset
                self._expected = []
            if self._offset == self._failure:
                self._expected.append('"tuning("')
        if address1 is not FAILURE:
            elements0.append(address1)
            address2 = FAILURE
            address2 = self._read_tune_note()
            if address2 is not FAILURE:
                elements0.append(address2)
                address3 = FAILURE
                remaining0, index2, elements1, address4 = 1, self._offset, [], True
                while address4 is not FAILURE:
                    index3, elements2 = self._offset, []
                    address5 = FAILURE
                    chunk1 = None
                    if self._offset < self._input_size:
                        chunk1 = self._input[self._offset:self._offset + 1]
                    if chunk1 == ',':
                        address5 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
                        self._offset = self._offset + 1
                    else:
                        address5 = FAILURE
                        if self._offset > self._failure:
                            self._failure = self._offset
                            self._expected = []
                        if self._offset == self._failure:
                            self._expected.append('","')
                    if address5 is not FAILURE:
                        elements2.append(address5)
                        address6 = FAILURE
                        address6 = self._read_tune_note()
                        if address6 is not FAILURE:
                            elements2.append(address6)
                        else:
                            elements2 = None
                            self._offset = index3
                    else:
                        elements2 = None
                        self._offset = index3
                    if elements2 is None:
                        address4 = FAILURE
                    else:
                        address4 = TreeNode3(self._input[index3:self._offset], index3, elements2)
                        self._offset = self._offset
                    if address4 is not FAILURE:
                        elements1.append(address4)
                        remaining0 -= 1
                if remaining0 <= 0:
                    address3 = TreeNode(self._input[index2:self._offset], index2, elements1)
                    self._offset = self._offset
                else:
                    address3 = FAILURE
                if address3 is not FAILURE:
                    elements0.append(address3)
                    address7 = FAILURE
                    chunk2 = None
                    if self._offset < self._input_size:
                        chunk2 = self._input[self._offset:self._offset + 1]
                    if chunk2 == ')':
                        address7 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
                        self._offset = self._offset + 1
                    else:
                        address7 = FAILURE
                        if self._offset > self._failure:
                            self._failure = self._offset
                            self._expected = []
                        if self._offset == self._failure:
                            self._expected.append('")"')
                    if address7 is not FAILURE:
                        elements0.append(address7)
                    else:
                        elements0 = None
                        self._offset = index1
                else:
                    elements0 = None
                    self._offset = index1
            else:
                elements0 = None
                self._offset = index1
        else:
            elements0 = None
            self._offset = index1
        if elements0 is None:
            address0 = FAILURE
        else:
            address0 = self._actions.make_tuning(self._input, index1, self._offset, elements0)
            self._offset = self._offset
        self._cache['tuning'][index0] = (address0, self._offset)
        return address0

    def _read_tune_note(self):
        address0, index0 = FAILURE, self._offset
        cached = self._cache['tune_note'].get(index0)
        if cached:
            self._offset = cached[1]
            return cached[0]
        index1, elements0 = self._offset, []
        address1 = FAILURE
        chunk0 = None
        if self._offset < self._input_size:
            chunk0 = self._input[self._offset:self._offset + 1]
        if chunk0 is not None and Grammar.REGEX_1.search(chunk0):
            address1 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
            self._offset = self._offset + 1
        else:
            address1 = FAILURE
            if self._offset > self._failure:
                self._failure = self._offset
                self._expected = []
            if self._offset == self._failure:
                self._expected.append('[A-G]')
        if address1 is not FAILURE:
            elements0.append(address1)
            address2 = FAILURE
            index2 = self._offset
            chunk1 = None
            if self._offset < self._input_size:
                chunk1 = self._input[self._offset:self._offset + 1]
            if chunk1 == '#':
                address2 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
                self._offset = self._offset + 1
            else:
                address2 = FAILURE
                if self._offset > self._failure:
                    self._failure = self._offset
                    self._expected = []
                if self._offset == self._failure:
                    self._expected.append('"#"')
            if address2 is FAILURE:
                address2 = TreeNode(self._input[index2:index2], index2)
                self._offset = index2
            if address2 is not FAILURE:
                elements0.append(address2)
                address3 = FAILURE
                chunk2 = None
                if self._offset < self._input_size:
                    chunk2 = self._input[self._offset:self._offset + 1]
                if chunk2 is not None and Grammar.REGEX_2.search(chunk2):
                    address3 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
                    self._offset = self._offset + 1
                else:
                    address3 = FAILURE
                    if self._offset > self._failure:
                        self._failure = self._offset
                        self._expected = []
                    if self._offset == self._failure:
                        self._expected.append('[1-8]')
                if address3 is not FAILURE:
                    elements0.append(address3)
                else:
                    elements0 = None
                    self._offset = index1
            else:
                elements0 = None
                self._offset = index1
        else:
            elements0 = None
            self._offset = index1
        if elements0 is None:
            address0 = FAILURE
        else:
            address0 = TreeNode(self._input[index1:self._offset], index1, elements0)
            self._offset = self._offset
        self._cache['tune_note'][index0] = (address0, self._offset)
        return address0

    def _read_measures(self):
        address0, index0 = FAILURE, self._offset
        cached = self._cache['measures'].get(index0)
        if cached:
            self._offset = cached[1]
            return cached[0]
        index1, elements0 = self._offset, []
        address1 = FAILURE
        remaining0, index2, elements1, address2 = 0, self._offset, [], True
        while address2 is not FAILURE:
            address2 = self._read__()
            if address2 is not FAILURE:
                elements1.append(address2)
                remaining0 -= 1
        if remaining0 <= 0:
            address1 = TreeNode(self._input[index2:self._offset], index2, elements1)
            self._offset = self._offset
        else:
            address1 = FAILURE
        if address1 is not FAILURE:
            elements0.append(address1)
            address3 = FAILURE
            address3 = self._read_measure()
            if address3 is not FAILURE:
                elements0.append(address3)
                address4 = FAILURE
                remaining1, index3, elements2, address5 = 0, self._offset, [], True
                while address5 is not FAILURE:
                    address5 = self._read__()
                    if address5 is not FAILURE:
                        elements2.append(address5)
                        remaining1 -= 1
                if remaining1 <= 0:
                    address4 = TreeNode(self._input[index3:self._offset], index3, elements2)
                    self._offset = self._offset
                else:
                    address4 = FAILURE
                if address4 is not FAILURE:
                    elements0.append(address4)
                    address6 = FAILURE
                    remaining2, index4, elements3, address7 = 0, self._offset, [], True
                    while address7 is not FAILURE:
                        index5, elements4 = self._offset, []
                        address8 = FAILURE
                        address8 = self._read_newline()
                        if address8 is not FAILURE:
                            elements4.append(address8)
                            address9 = FAILURE
                            remaining3, index6, elements5, address10 = 0, self._offset, [], True
                            while address10 is not FAILURE:
                                address10 = self._read__()
                                if address10 is not FAILURE:
                                    elements5.append(address10)
                                    remaining3 -= 1
                            if remaining3 <= 0:
                                address9 = TreeNode(self._input[index6:self._offset], index6, elements5)
                                self._offset = self._offset
                            else:
                                address9 = FAILURE
                            if address9 is not FAILURE:
                                elements4.append(address9)
                                address11 = FAILURE
                                address11 = self._read_measure()
                                if address11 is not FAILURE:
                                    elements4.append(address11)
                                    address12 = FAILURE
                                    remaining4, index7, elements6, address13 = 0, self._offset, [], True
                                    while address13 is not FAILURE:
                                        address13 = self._read__()
                                        if address13 is not FAILURE:
                                            elements6.append(address13)
                                            remaining4 -= 1
                                    if remaining4 <= 0:
                                        address12 = TreeNode(self._input[index7:self._offset], index7, elements6)
                                        self._offset = self._offset
                                    else:
                                        address12 = FAILURE
                                    if address12 is not FAILURE:
                                        elements4.append(address12)
                                    else:
                                        elements4 = None
                                        self._offset = index5
                                else:
                                    elements4 = None
                                    self._offset = index5
                            else:
                                elements4 = None
                                self._offset = index5
                        else:
                            elements4 = None
                            self._offset = index5
                        if elements4 is None:
                            address7 = FAILURE
                        else:
                            address7 = TreeNode5(self._input[index5:self._offset], index5, elements4)
                            self._offset = self._offset
                        if address7 is not FAILURE:
                            elements3.append(address7)
                            remaining2 -= 1
                    if remaining2 <= 0:
                        address6 = TreeNode(self._input[index4:self._offset], index4, elements3)
                        self._offset = self._offset
                    else:
                        address6 = FAILURE
                    if address6 is not FAILURE:
                        elements0.append(address6)
                    else:
                        elements0 = None
                        self._offset = index1
                else:
                    elements0 = None
                    self._offset = index1
            else:
                elements0 = None
                self._offset = index1
        else:
            elements0 = None
            self._offset = index1
        if elements0 is None:
            address0 = FAILURE
        else:
            address0 = TreeNode4(self._input[index1:self._offset], index1, elements0)
            self._offset = self._offset
        self._cache['measures'][index0] = (address0, self._offset)
        return address0

    def _read_measure(self):
        address0, index0 = FAILURE, self._offset
        cached = self._cache['measure'].get(index0)
        if cached:
            self._offset = cached[1]
            return cached[0]
        index1, elements0 = self._offset, []
        address1 = FAILURE
        index2 = self._offset
        index3, elements1 = self._offset, []
        address2 = FAILURE
        address2 = self._read_tempo()
        if address2 is not FAILURE:
            elements1.append(address2)
            address3 = FAILURE
            remaining0, index4, elements2, address4 = 1, self._offset, [], True
            while address4 is not FAILURE:
                address4 = self._read__()
                if address4 is not FAILURE:
                    elements2.append(address4)
                    remaining0 -= 1
            if remaining0 <= 0:
                address3 = TreeNode(self._input[index4:self._offset], index4, elements2)
                self._offset = self._offset
            else:
                address3 = FAILURE
            if address3 is not FAILURE:
                elements1.append(address3)
            else:
                elements1 = None
                self._offset = index3
        else:
            elements1 = None
            self._offset = index3
        if elements1 is None:
            address1 = FAILURE
        else:
            address1 = TreeNode7(self._input[index3:self._offset], index3, elements1)
            self._offset = self._offset
        if address1 is FAILURE:
            address1 = TreeNode(self._input[index2:index2], index2)
            self._offset = index2
        if address1 is not FAILURE:
            elements0.append(address1)
            address5 = FAILURE
            index5 = self._offset
            index6, elements3 = self._offset, []
            address6 = FAILURE
            address6 = self._read_marker()
            if address6 is not FAILURE:
                elements3.append(address6)
                address7 = FAILURE
                remaining1, index7, elements4, address8 = 1, self._offset, [], True
                while address8 is not FAILURE:
                    address8 = self._read__()
                    if address8 is not FAILURE:
                        elements4.append(address8)
                        remaining1 -= 1
                if remaining1 <= 0:
                    address7 = TreeNode(self._input[index7:self._offset], index7, elements4)
                    self._offset = self._offset
                else:
                    address7 = FAILURE
                if address7 is not FAILURE:
                    elements3.append(address7)
                else:
                    elements3 = None
                    self._offset = index6
            else:
                elements3 = None
                self._offset = index6
            if elements3 is None:
                address5 = FAILURE
            else:
                address5 = TreeNode8(self._input[index6:self._offset], index6, elements3)
                self._offset = self._offset
            if address5 is FAILURE:
                address5 = TreeNode(self._input[index5:index5], index5)
                self._offset = index5
            if address5 is not FAILURE:
                elements0.append(address5)
                address9 = FAILURE
                index8 = self._offset
                index9, elements5 = self._offset, []
                address10 = FAILURE
                address10 = self._read_triplet_feel()
                if address10 is not FAILURE:
                    elements5.append(address10)
                    address11 = FAILURE
                    remaining2, index10, elements6, address12 = 1, self._offset, [], True
                    while address12 is not FAILURE:
                        address12 = self._read__()
                        if address12 is not FAILURE:
                            elements6.append(address12)
                            remaining2 -= 1
                    if remaining2 <= 0:
                        address11 = TreeNode(self._input[index10:self._offset], index10, elements6)
                        self._offset = self._offset
                    else:
                        address11 = FAILURE
                    if address11 is not FAILURE:
                        elements5.append(address11)
                    else:
                        elements5 = None
                        self._offset = index9
                else:
                    elements5 = None
                    self._offset = index9
                if elements5 is None:
                    address9 = FAILURE
                else:
                    address9 = TreeNode9(self._input[index9:self._offset], index9, elements5)
                    self._offset = self._offset
                if address9 is FAILURE:
                    address9 = TreeNode(self._input[index8:index8], index8)
                    self._offset = index8
                if address9 is not FAILURE:
                    elements0.append(address9)
                    address13 = FAILURE
                    index11 = self._offset
                    index12, elements7 = self._offset, []
                    address14 = FAILURE
                    address14 = self._read_start_repeat()
                    if address14 is not FAILURE:
                        elements7.append(address14)
                        address15 = FAILURE
                        remaining3, index13, elements8, address16 = 1, self._offset, [], True
                        while address16 is not FAILURE:
                            address16 = self._read__()
                            if address16 is not FAILURE:
                                elements8.append(address16)
                                remaining3 -= 1
                        if remaining3 <= 0:
                            address15 = TreeNode(self._input[index13:self._offset], index13, elements8)
                            self._offset = self._offset
                        else:
                            address15 = FAILURE
                        if address15 is not FAILURE:
                            elements7.append(address15)
                        else:
                            elements7 = None
                            self._offset = index12
                    else:
                        elements7 = None
                        self._offset = index12
                    if elements7 is None:
                        address13 = FAILURE
                    else:
                        address13 = TreeNode10(self._input[index12:self._offset], index12, elements7)
                        self._offset = self._offset
                    if address13 is FAILURE:
                        address13 = TreeNode(self._input[index11:index11], index11)
                        self._offset = index11
                    if address13 is not FAILURE:
                        elements0.append(address13)
                        address17 = FAILURE
                        address17 = self._read_notes()
                        if address17 is not FAILURE:
                            elements0.append(address17)
                            address18 = FAILURE
                            index14 = self._offset
                            index15, elements9 = self._offset, []
                            address19 = FAILURE
                            remaining4, index16, elements10, address20 = 1, self._offset, [], True
                            while address20 is not FAILURE:
                                address20 = self._read__()
                                if address20 is not FAILURE:
                                    elements10.append(address20)
                                    remaining4 -= 1
                            if remaining4 <= 0:
                                address19 = TreeNode(self._input[index16:self._offset], index16, elements10)
                                self._offset = self._offset
                            else:
                                address19 = FAILURE
                            if address19 is not FAILURE:
                                elements9.append(address19)
                                address21 = FAILURE
                                address21 = self._read_close_repeat()
                                if address21 is not FAILURE:
                                    elements9.append(address21)
                                else:
                                    elements9 = None
                                    self._offset = index15
                            else:
                                elements9 = None
                                self._offset = index15
                            if elements9 is None:
                                address18 = FAILURE
                            else:
                                address18 = TreeNode11(self._input[index15:self._offset], index15, elements9)
                                self._offset = self._offset
                            if address18 is FAILURE:
                                address18 = TreeNode(self._input[index14:index14], index14)
                                self._offset = index14
                            if address18 is not FAILURE:
                                elements0.append(address18)
                            else:
                                elements0 = None
                                self._offset = index1
                        else:
                            elements0 = None
                            self._offset = index1
                    else:
                        elements0 = None
                        self._offset = index1
                else:
                    elements0 = None
                    self._offset = index1
            else:
                elements0 = None
                self._offset = index1
        else:
            elements0 = None
            self._offset = index1
        if elements0 is None:
            address0 = FAILURE
        else:
            address0 = TreeNode6(self._input[index1:self._offset], index1, elements0)
            self._offset = self._offset
        self._cache['measure'][index0] = (address0, self._offset)
        return address0

    def _read_start_repeat(self):
        address0, index0 = FAILURE, self._offset
        cached = self._cache['start_repeat'].get(index0)
        if cached:
            self._offset = cached[1]
            return cached[0]
        chunk0 = None
        if self._offset < self._input_size:
            chunk0 = self._input[self._offset:self._offset + 2]
        if chunk0 == '|:':
            address0 = self._actions.make_start_repeat(self._input, self._offset, self._offset + 2)
            self._offset = self._offset + 2
        else:
            address0 = FAILURE
            if self._offset > self._failure:
                self._failure = self._offset
                self._expected = []
            if self._offset == self._failure:
                self._expected.append('"|:"')
        self._cache['start_repeat'][index0] = (address0, self._offset)
        return address0

    def _read_close_repeat(self):
        address0, index0 = FAILURE, self._offset
        cached = self._cache['close_repeat'].get(index0)
        if cached:
            self._offset = cached[1]
            return cached[0]
        index1, elements0 = self._offset, []
        address1 = FAILURE
        chunk0 = None
        if self._offset < self._input_size:
            chunk0 = self._input[self._offset:self._offset + 2]
        if chunk0 == ':|':
            address1 = TreeNode(self._input[self._offset:self._offset + 2], self._offset)
            self._offset = self._offset + 2
        else:
            address1 = FAILURE
            if self._offset > self._failure:
                self._failure = self._offset
                self._expected = []
            if self._offset == self._failure:
                self._expected.append('":|"')
        if address1 is not FAILURE:
            elements0.append(address1)
            address2 = FAILURE
            index2 = self._offset
            index3, elements1 = self._offset, []
            address3 = FAILURE
            chunk1 = None
            if self._offset < self._input_size:
                chunk1 = self._input[self._offset:self._offset + 1]
            if chunk1 is not None and Grammar.REGEX_3.search(chunk1):
                address3 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
                self._offset = self._offset + 1
            else:
                address3 = FAILURE
                if self._offset > self._failure:
                    self._failure = self._offset
                    self._expected = []
                if self._offset == self._failure:
                    self._expected.append('[1-9]')
            if address3 is not FAILURE:
                elements1.append(address3)
                address4 = FAILURE
                index4 = self._offset
                chunk2 = None
                if self._offset < self._input_size:
                    chunk2 = self._input[self._offset:self._offset + 1]
                if chunk2 is not None and Grammar.REGEX_4.search(chunk2):
                    address4 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
                    self._offset = self._offset + 1
                else:
                    address4 = FAILURE
                    if self._offset > self._failure:
                        self._failure = self._offset
                        self._expected = []
                    if self._offset == self._failure:
                        self._expected.append('[0-9]')
                if address4 is FAILURE:
                    address4 = TreeNode(self._input[index4:index4], index4)
                    self._offset = index4
                if address4 is not FAILURE:
                    elements1.append(address4)
                    address5 = FAILURE
                    chunk3 = None
                    if self._offset < self._input_size:
                        chunk3 = self._input[self._offset:self._offset + 1]
                    if chunk3 == 'x':
                        address5 = TreeNode(self._input[self._offset:self._offset + 1], self._offset)
                        self._offset = self._offset + 1
                    else:
                        address5 = FAILURE
                        if self._offset > self._failure:
                            self._failure = self._offset
                            self._expected = []
                        if self._offset == self._failure:
                            self._expected.append('"x"')
                    if address5 is not FAILURE:
                        elements1.append(address5)
                    else:
                        elements1 = None
                        self._offset = index3
                else:
                    elements1 = None
                    self._offset = index3
            else:
                elements1 = None
                self._offset = index3
            if elements1 is None:
                address2 = FAILURE
            else:
                address2 = TreeNode(self._input[index3:self._offset], index3, elements1)
                self._offset = self._offset
            if address2 is FAILURE:
                address2 = TreeNode(self._input[index2:index2], index2)
                self._offset = index2
            if address2 is not FAILURE:
                elements0.append(address2)
            else:
                elements0 = None
                self._offset = index1
        else:
            elements0 = None
            self._offset = index1
        if elements0 is None:
            address0 = FAILURE
        else:
            address0 = self._actions.make_close_repeat(self._input, index1, self._offset, elements0)
            self._offset = self._offset
        self._cache['close_repeat'][index0] = (address0, self._offset)
        return address0
